# misty

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TESTS.md  client.cpp  minidfs.conf  minidfs.slnx  server.cpp  utils.h  vcpkg.json
application/: application.cpp  application.h  main.cpp  minidfs.cpp  minidfs.h
application/core/: app_view_registry.h  asset_manager.cpp  asset_manager.h  registry.h  svg_loader.cpp  svg_loader.h  ui_registry.h  worker_pool.cpp  worker_pool.h
application/panels/: file_explorer_panel.cpp  file_explorer_panel.h  file_explorer_state.h  navbar_panel.cpp  navbar_panel.h  navbar_state.h  tool_menu_panel.cpp  tool_menu_panel.h  tool_menu_state.h
application/views/: app_view.cpp  app_view.h  file_explorer_view.cpp  file_explorer_view.h
assets/themes/: default.css
cmake/: setup_application.cmake  setup_gui.cmake  setup_minidfs.cmake  setup_proto.cmake  setup_server.cmake  setup_tests.cmake  setup_vendor.cmake
dfs/: file_manager.cpp  file_manager.h  minidfs_client.cpp  minidfs_client.h  minidfs_impl.cpp  minidfs_impl.h
gui/: draw_ui.cpp
gui/application/: application.h  layout.cpp  layout.h  mac_application.h
gui/shaders/: shader.cpp  shader.h  text.fs  text.vs
gui/utils/: image_loader.h
gui/window/: glad.cpp  window.h  (+4 more)
minidfs/: CMakeLists.txt  minidfs.conf
proto/: auth.proto  minidfs.proto
proto_src/: minidfs.grpc.pb.h  minidfs.pb.cc
proxy/: Makefile  go.mod  go.sum  main.go  proxy.go
scripts/: proto_cpp.sh  proto_swift.sh  proto_ts.sh  setup_vendors.bat  setup_vendors.sh
tests/: minidfs_single_client_tests.cpp
(+252 files in other folders)
